# war-card-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: card.h  deck.h  game.h  hand.h  utils.h
src/: card.c  deck.c  game.c  hand.c  main.c  utils.c
